apps/template-app/overlays/prod/http-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: template-app-http-redirect
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: template.truxonline.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: template-app
                port:
                  number: 80
