apps/template-app/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: template-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: template.truxonline.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: template-app
                port:
                  number: 80
  tls:
    - secretName: template-app-tls
      hosts:
        - template.truxonline.com
